--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
                 
                 <p class="forgotPassword">Esqueceu sua senha?</p>
     
-                <p>Primeira vez aqui? <a href="/emaillogon">Assine agora</a>.</p>
+                <p>Primeira vez aqui? <a href="/emaillogon">Assine agora.</a></p>
             </div>
         </div>
     </body>
