login & register process done, starting admin pages

--- a/views/passwordlogon.ejs
+++ b/views/passwordlogon.ejs
@@ -30,7 +30,7 @@
             <div class="emailLogged">
                 <p>
                     Você está cadastrando o e-mail:
-                    <span>gmail@gmail.com</span>
+                    <span id="emailInserted"><%= email %></span>
                 </p>
             </div>
         </div>
@@ -50,7 +50,7 @@
                         </div>
         
                         <div class="newPasswordInput">
-                            <input type="text" required id="newPassword" name="newPassword" autocomplete="off">
+                            <input type="password" required id="newPassword" name="newPassword" autocomplete="off">
                             <label class="labelline" for="newPassword">Insira sua senha</label>
                         </div>
                     </div>
