--- a/views/userslogon.ejs
+++ b/views/userslogon.ejs
@@ -29,7 +29,7 @@
     
             <div class="emailLogged">
                 <p>
-                    Quais perfis você deseja cadastrar?
+                    Quais perfis você deseja cadastrar? Insira os quatro.
                 </p>
             </div>
         </div>
