--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title><%= title %></title>
-        <link rel="stylesheet" href="/stylesheets/style.css" />
+        <title>Login do Administrador</title>
+        <link rel="stylesheet" href="../../public/stylesheets/admin/login.css" />
     </head>
     <body>
         <div class="app">
             <div class="title">
-                <img src="/images/logo.png" alt="logo">
+                <img src="../../public/images/logo.png" alt="logo">
                 <h1><%= title %></h1>
             </div>
     
