--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -2,19 +2,19 @@
 <html>
     <head>
         <title>Login do Administrador</title>
-        <link rel="stylesheet" href="../../public/stylesheets/admin/login.css" />
+        <link rel="stylesheet" href="/stylesheets/admin/login.css" />
     </head>
     <body>
         <div class="app">
             <div class="title">
-                <img src="../../public/images/logo.png" alt="logo">
+                <img src="/images/logo.png" alt="logo">
                 <h1><%= title %></h1>
             </div>
     
             <div class="login">
-                <h2>Entrar</h2>
+                <h2>Entrar como administrador</h2>
     
-                <form action="/login" method="POST">
+                <form action="/admin/loginadmin" method="POST">
                     <div class="inputLayout">
                         <div class="inputContainer">
                             <div class="emailInput">
@@ -31,10 +31,6 @@
                         <button class="submitButton" type="submit">Entrar</button>
                     </div>
                 </form>
-                
-                <p class="forgotPassword">Esqueceu sua senha?</p>
-    
-                <p>Primeira vez aqui? <a href="/emaillogon">Assine agora.</a></p>
             </div>
         </div>
     </body>
