starting admin dashboard - genres + fixing login problems

--- a/views/userslogon.ejs
+++ b/views/userslogon.ejs
@@ -29,7 +29,7 @@
         
                 <div class="emailLogged">
                     <p>
-                        Quais perfis você deseja cadastrar? Insira os quatro.
+                        Qual o nome dos seus quatro novos perfis?
                     </p>
                 </div>
             </div>
