fixing bugs: changing all user login router logic to a more correct, robust, clean code

--- a/views/passwordlogon.ejs
+++ b/views/passwordlogon.ejs
@@ -36,7 +36,7 @@
             </div>
 
             <div class="passwordLogon">
-                <form action="/passwordlogon" method="POST">
+                <form action="/passwordlogon/<%= email %>" method="POST">
                     <div class="inputLayout">
                         <div class="inputContainer">
                             <div class="newUsernameInput">
