--- a/views/admin/genres.ejs
+++ b/views/admin/genres.ejs
@@ -32,7 +32,11 @@
             </div>
 
             <div class="genres">
-                <h2>Gêneros</h2>
+                <div class="genresTitle">
+                    <h2>Gêneros</h2>
+
+                    <a href="/admin/newgender" class="addButton">Novo gênero</a>
+                </div>
 
                 <div class="genresTableDiv">
                     <table id="genresTable">
