--- a/public/stylesheets/admin/genres.css
+++ b/public/stylesheets/admin/genres.css
@@ -116,13 +116,37 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 2rem;
+    gap: 3rem;
     width: 60rem;
 }
 
-.genres > h2 {
+.genresTitle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.genresTitle > h2 {
     color: var(--white);
     font-size: 2.5rem;
+}
+
+.addButton {
+    padding: .5rem 1rem;
+    color: var(--black);
+    font-weight: 600;
+    font-size: 1.5rem;
+    border-radius: .7rem;
+    background: var(--white);
+    border: 1px solid var(--white);
+    transition: opacity linear .2s;
+    text-decoration: none;
+}
+
+.addButton:hover {
+    cursor: pointer;
+    opacity: .8;
 }
 
 .genresTableDiv {
