added funcionality to delete gender

--- a/views/admin/genres.ejs
+++ b/views/admin/genres.ejs
@@ -57,7 +57,9 @@
                                     <td class="fourthTd">
                                         <div class="actionButtons">
                                             <button><img src="/images/edit.png" alt="Editar" class="editButton"></button>
-                                            <button><img src="/images/delete.png" alt="Excluir" class="removeButton"></button>
+                                            <a href="/admin/deletegender/<%= gender.genderId %>" onclick="return confirm('Deseja mesmo deletar o gênero?');">
+                                                <img src="/images/delete.png" alt="Excluir" class="removeButton">
+                                            </a>
                                         </div>
                                     </td>
                                 </tr>
