--- a/views/admin/newmovie.ejs
+++ b/views/admin/newmovie.ejs
@@ -29,6 +29,12 @@
                             <label class="labelline" for="desc">Descrição</label>
                         </div>
 
+                        <!-- TO-DO: TRANSFORMAR EM SELECT COM TODOS OS GENEROS -->
+                        <div class="genderInput">
+                            <input type="text" required id="gender" name="gender" autocomplete="off">
+                            <label class="labelline" for="gender">Gênero</label>
+                        </div>
+
                         <div class="imageInput">
                             <input type="text" required id="image" name="image" autocomplete="off">
                             <label class="labelline" for="image">Imagem - Upload</label>
