adding delete funcionality to movies page

--- a/views/admin/movies.ejs
+++ b/views/admin/movies.ejs
@@ -60,7 +60,7 @@
                                                 <img src="/images/edit.png" alt="Editar" class="editButton">
                                             </a>
                                             
-                                            <a href="" onclick="return confirm('Deseja mesmo deletar o filme?');">
+                                            <a href="/admin/deletemovie/<%= movie.movieid %>" onclick="return confirm('Deseja mesmo deletar o filme?');">
                                                 <img src="/images/delete.png" alt="Excluir" class="removeButton">
                                             </a>
                                         </div>
