--- a/views/admin/movies.ejs
+++ b/views/admin/movies.ejs
@@ -22,7 +22,7 @@
                 <div class="headerMenus">
                     <div class="menus">
                         <a href="">Estatísticas</a>
-                        <a href="">Usuários</a>
+                        <a href="/admin/users">Usuários</a>
                         <a href="/admin/genres">Gêneros</a>
                         <a href="" class="picked">Filmes</a>
                     </div>
