--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -46,6 +46,7 @@
                                 <th class="userName">Nome</th>
                                 <th class="userEmail">Email</th>
                                 <th class="profilesAmount">Perfis</th>
+                                <th class="permission">Permissão</th>
                                 <th class="action">Ações</th>
                             </tr>
                         </thead>
@@ -56,7 +57,8 @@
                                     <td class="secondTd"><%= user.userName %></td>
                                     <td class="thirdTd"><%= user.userEmail %></td>
                                     <td class="fourthTd"><%= user.profilesAmount %></td>
-                                    <td class="fifthTd">
+                                    <td class="fifthTd"><%= user.permission === 1 ? 'Admin' : 'Usuário' %></td>
+                                    <td class="sixthTd">
                                         <div class="actionButtons">
                                             <a href="">
                                                 <img src="/images/edit.png" alt="Editar" class="editButton">
