correcting possibility to post a null value for select

--- a/views/admin/newuser.ejs
+++ b/views/admin/newuser.ejs
@@ -40,7 +40,7 @@
                         </div>
 
                         <div class="adminSelect">
-                            <select name="admin" id="admin">
+                            <select name="admin" id="admin" required>
                                 <option value="" disabled selected>Tipo de permissão</option>
                                 <option value="yes">Admin</option>
                                 <option value="no">Usuário</option>
