--- a/views/admin/newmovie.ejs
+++ b/views/admin/newmovie.ejs
@@ -30,7 +30,7 @@
                         </div>
 
                         <div class="genderSelect">
-                            <select name="gender" id="gender">
+                            <select name="gender" id="gender" required>
                                 <option value="" disabled selected>Selecione um gênero</option>
                                 <% allGenres.forEach(gender => { %>
                                     <option value="<%= gender.genderid %>"><%= gender.gendername %></option>
