adding funcionality to update user

--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -60,7 +60,7 @@
                                     <td class="fifthTd"><%= user.permission === 1 ? 'Admin' : 'Usuário' %></td>
                                     <td class="sixthTd">
                                         <div class="actionButtons">
-                                            <a href="">
+                                            <a href="/admin/updateuser/<%= user.userId %>">
                                                 <img src="/images/edit.png" alt="Editar" class="editButton">
                                             </a>
                                             
