--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -21,7 +21,7 @@
 
                 <div class="headerMenus">
                     <div class="menus">
-                        <a href="">Estatísticas</a>
+                        <a href="/admin/statistics">Estatísticas</a>
                         <a href="" class="picked">Usuários</a>
                         <a href="/admin/genres">Gêneros</a>
                         <a href="/admin/movies">Filmes</a>
